@@ -68,6 +68,7 @@ Other wrapper: \code{\link{makeBaggingWrapper}},
   \code{\link{makeMultilabelBinaryRelevanceWrapper}},
   \code{\link{makePreprocWrapperCaret}},
   \code{\link{makePreprocWrapper}},
+  \code{\link{makeRemoveConstantFeaturesWrapper}},
   \code{\link{makeSMOTEWrapper}},
   \code{\link{makeTuneWrapper}},
   \code{\link{makeUndersampleWrapper}},
