@@ -37,6 +37,7 @@ Other wrapper: \code{\link{makeBaggingWrapper}},
   \code{\link{makeMultilabelBinaryRelevanceWrapper}},
   \code{\link{makeOverBaggingWrapper}},
   \code{\link{makePreprocWrapper}},
+  \code{\link{makeRemoveConstantFeaturesWrapper}},
   \code{\link{makeSMOTEWrapper}},
   \code{\link{makeTuneWrapper}},
   \code{\link{makeUndersampleWrapper}},
